/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2021-03-04 09:45 UTC+0100 Wilfried Brunken DF7BE
  *  doc/hwgdoc.html
  *  doc/hwgdoc_commands.html
  *  doc/hwgdoc_functions.html
  *  source/gtk/hedit.prg
  *  source/gtk/hmisc.prg
  *  source/winapi/hmisc.prg
  *  test/ticket79.prg (New)
  *  todo.txt
   ! Ticket #79: Because GTK class gtk_entry_*
   ! does not support color setting, this ticket 
   ! can be closed. A hint in command docu added.
   ! See post to ticket.
   ! New functions hwg_StrDebNIL() and hwg_StrDebLog()
   ! for debugging purposes. 
   ! Docu updated, little corrections.

2021-03-03 09:10 UTC+0100 Wilfried Brunken DF7BE
  * samples/testspli.prg
  * source/gtk/drawwidg.prg
  * source/winapi/drawwidg.prg
  * doc/hwgdoc_functions.html
   ! Ticket 32:
   ! New function hwg_LoadCursorFromString() for use with
   ! hex values for custom cursor.
   ! Docu updated.


2021-03-02 15:30 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_functions.html
  * whatsnew.txt
   ! Docu updated.
  * make_hbmk.bat (New)
   ! Call simply this bat for compile with hbmk2 on Win.
  * samples/testspli.prg
  * samples/transistor.cur (New)
   ! Ticket 32: hwg_LoadCursorFromFile() port to GTK.
   ! New cur file for test and experiments.
  * source/gtk/commond.c
  * source/gtk/control.c
  * source/gtk/draw.c
  * source/gtk/drawtext.c
  * source/gtk/inter.c
  * source/gtk/menu_c.c
  * source/gtk/message.c
  * source/gtk/wprint.c
   ! Ticket 77: Warnings with GCC 10 on LINUX. 


2021-03-01 11:00 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_functions.html
   ! Updated.
   ! hwg_LoadCursor(): Full description added.
  * hwgui.hbc
   ! libhbactivex removed, out of support.
   ! Otherwise not compilable on Windows 10 with BCC.
  * include/gtk.ch
   ! 2 new defines added from recent GTK 2.
  * make_hbmk.sh
  * install.txt