@@ -1344,7 +1344,16 @@
     See GTK 2 reference for gtk_entry_* class.<br>
     There are no parameters "color" explained.<br>
     Sorry, we must wait, if this feature is realized in future versions of GTK.<br>
-    <br> 
+    <br>
+    Here screenshots for sample command<br>
+    "@ x, y GET oGet VAR cGet COLOR hwg_ColorC2N("FF0000") SIZE xx,yy":<br>
+    <br>
+    WinAPI:<br>
+    <img src="./image/ticket79win.png" align=center wborder=0 alt="GET color WinAPI"><br>
+    Windows GTK cross development environment:<br>
+    <img src="./image/ticket79gtk_win.png" align=center wborder=0 alt="GET color WinGtKCrossEnv"><br>
+    LINUX:<br>
+    <img src="./image/ticket79linux.png" align=center wborder=0 alt="GET color LINUX"><br> 
     </p>
 
     <br><a name="Commands4-3" href="#_Commands4-3">4.4.3.  @ &lt;x&gt;,&lt;y&gt; GET CHECKBOX</a>
